# silent_MPC

./: CMakeLists.txt  README.md
benchmarks/: CMakeLists.txt  bench_algebra.cpp  bench_pcf.cpp  rollback_safety_benchmark.cpp  setup_cost_benchmark.cpp  tile_sensitivity_benchmark.cpp
examples/: simple_ole.cpp  simple_pcf_example.cpp
include/silentmpc/algebra/: gf2.hpp  gfq.hpp  z2k.hpp
include/silentmpc/core/: types.hpp
include/silentmpc/crypto/: base_ot.hpp
include/silentmpc/network/: connection.hpp  message.hpp  two_party_network.hpp
include/silentmpc/pcf/: isd_estimator.hpp  lpn_security.hpp  pcf_core.hpp
include/silentmpc/runtime/: allocator.hpp  epoch_manager.hpp
include/silentmpc/selective_delivery/: multi_point_dpf.hpp  point_share.hpp
scripts/: setup_network.sh
src/core/: types.cpp
src/core/algebra/: gf2.cpp  gfq.cpp  z2k.cpp
src/network/: connection.cpp  message.cpp  two_party_network.cpp
src/pcf/: pcf_core.cpp
src/runtime/: allocator.cpp  epoch_manager.cpp
src/selective_delivery/: dpf_backend.cpp  ot_backend.cpp
tests/: CMakeLists.txt  test_algebra.cpp  test_pcf.cpp  test_runtime.cpp
